# logimoca-backend

./: .coverage  .gitignore  PRD.md  README.md  alembic.ini  enrich_program_data.py  index.html  pyproject.toml  requirements.txt  tailwind.config.ts
alembic/: env.py
api/: __init__.py  main.py
api/models/: __init__.py  associations.py  base.py  client_model.py  client_models.py  content_model_reference.py  hs_skill.py  institution.py  interest.py  interest_assessment.py  interest_code.py  job_zone_reference.py  occupation.py  onet_occupation.py  program.py  scale.py  sector.py  skill.py
api/services/: riasec_combo_map.py
data/static_data/: ONET_ERD  oneStop40Skills.json
data_pipeline/processor/: README.md  README_EMBEDDINGS.md  __init__.py  build_occupation_associations.py  embed_programs.py  enrich_program_data.py  ingest_all.py  ingest_programs.py  ingest_sectors.py  populate_occupations.py  populate_real_program_data.py
data_pipeline/raw/: BLS_hsCareer_tips.txt  hi_careers_pages_cleaned_with_links.json  scratch.json  structured_career_pathways.json
database/static_data/: RIASEC_areas.json  interest60questions.json
migrations/: env.py
migrations/versions/: b1f2c1d2e3f4_init_app_schema.py
scripts/: model_smoke_test.py
spec/: 001-database-models.md
src/: App.tsx  analyze_program_data.py  index.css  main.py  populate_real_program_data.py
src/api/: __init__.py  routes.py
src/components/: Navigation.tsx
src/core/: llm.py  security.py
src/data/: skillsData.ts
src/db/: base_class.py  session.py  vector_store.py
tests/: conftest.py
(+72 files in other folders)
