[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[project]
name = "uhpathfinder-backend"
version = "0.1.0"
description = "UH Pathfinder Backend API"
requires-python = ">=3.8"
dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "alembic>=1.0.0",
    "psycopg2-binary>=2.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["api"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]